--- a/_data/contact.yml
+++ b/_data/contact.yml
@@ -2,6 +2,7 @@
 
 - type: github
   icon: "fab fa-github"
+  url:  'https://github.com/phoenixfei'
 
 - type: twitter
   icon: "fa-brands fa-x-twitter"
@@ -10,9 +11,11 @@
   icon: "fas fa-envelope"
   noblank: true # open link in current tab
 
-- type: rss
-  icon: "fas fa-rss"
+- type: leetcode
+  icon: "fa-solid fa-chart-diagram"
   noblank: true
+  url:  'https://leetcode.cn/u/phoenixfei/'
+
 # Uncomment and complete the url below to enable more contact options
 #
 # - type: mastodon
